[package]
name = "bgp-looking-glass-rs"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
regex = "1.11.1"
menhera-inet = "0.1.1"
